[package]
name = "primitives-duration"
version = "2.1.0"
authors = ["Agustinus Theodorus <agustinustheoo@gmail.com>"]
edition = '2021'

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18" }

[features]
default = ['std']
std = [
  'scale-info/std',
  'frame-support/std',
]

